Update travis. Test docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,8 @@ go:
 
 before_install:
   - cd ./web-app
+
+after_install:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker build -t ${DOCKER_USERNAME}/webapp:latest .
+  - docker push ${DOCKER_USERNAME}/webapp:latest
