Update travis. Test docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ jobs:
 
     - stage: docker
       before_install:
+        - cd ./web-app
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       script:
         - docker build -t ${DOCKER_USERNAME}/webapp:latest .
