--- a/ansible/singleInstance/deploy.yaml
+++ b/ansible/singleInstance/deploy.yaml
@@ -7,11 +7,14 @@
     - stack_data.yaml
   
   tasks:
+  - name: apt update
+    apt:
+      update_cache: yes
+
   - name: Install pip3
     apt:
       pkg: python3-pip
       state: present
-      update_cache: true
 
   - name: "Install python libraries"
     pip:
@@ -24,14 +27,13 @@
     apt: 
       pkg: docker.io
       state: present
-      update_cache: true
     register: docker_started
     notify: Enable docker
   
   - name: Start webapp container
     docker_container:
       name: webapp
-      image: mmadraimov/webapp:v1.0
+      image: mmadraimov/webapp:latest
       state: started
       restart_policy: unless-stopped
       ports:
