--- a/ansible/autoscale/group_vars/all.yml
+++ b/ansible/autoscale/group_vars/all.yml
@@ -1,6 +1,9 @@
-region: eu-west-1
-zone: eu-west-1a
-keypair: keypair
+network_stack_name: "wallester-test-network"
+database_stack_name: "wallester-test-database"
+webapp_stack_name: "wallester-test-webapp"
+
+aws_region: eu-west-1 # Ireland
+ec2_keypair: keypair
 instance_type: t2.micro
 volumes:
   - device_name: /dev/sda1
